--- a/Ovning16/Components/Pages/Home.razor
+++ b/Ovning16/Components/Pages/Home.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>AWIPEV Atmosphere Observatory</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h1>Instrument Status and Control Panel</h1>
