refactor: Format the MostRecentUpdate as a string
Add method to format the MostRecentUpdate DateTime as a string with particular attention paid to the default value (i.e. never connected). Also include the TimeSinceUpdate and a formatting method for that.

--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -20,6 +20,7 @@ else
                 <th>Description</th>
                 <th>Online?</th>
                 <th>Last updated</th>
+                <th>Time since update</th>
             </tr>
         </thead>
         <tbody>
@@ -31,7 +32,8 @@ else
                     <td>@device.Name</td>
                     <td>@device.Description</td>
                     <td>@device.IsOnline</td>
-                    <td>@device.MostRecentUpdate</td>
+                    <td>@device.FormattedUpdate()</td>
+                    <td>@device.FormattedTimeSinceUpdate()</td>
                 </tr>
             }
         </tbody>
