feat: Add method to show shortened Guid in DeviceOverview

--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -27,7 +27,7 @@ else
             {
                 <tr>
                     <td></td>
-                    <td>@device.DeviceGuid</td>
+                    <td>@device.ShortGuid</td>
                     <td>@device.Name</td>
                     <td>@device.Description</td>
                     <td>@device.IsOnline</td>
