feat: Start adding EditDevice page

--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -45,6 +45,7 @@ else
                     }
                     <td>
                         <a href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
+                        <a href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
                     </td>
                 </tr>
             }
