--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -1,5 +1,47 @@
 ﻿@page "/editdevice/{DeviceGuid:guid}"
+@rendermode InteractiveServer
 
 <PageTitle>AWIPEV Atmosphere Observatory</PageTitle>
 
 <h1>Edit instrument details</h1>
+
+@if (Device is null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <section>
+        <EditForm Enhance Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
+            <div class="row">
+                <label for="guid" class="col-form-label col-3">Device ID: </label>
+                <div class="col-8">
+                    <input type="text" disabled id="guid" class="form-control col-8" value="@Device.DeviceGuid" />
+                </div>
+            </div>
+
+            <div class="row">
+                <label for="name" class="col-form-label col-3">Name: </label>
+                <div class="col-8">
+                    <InputText id="name" class="form-control col-8" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
+                </div>
+            </div>
+
+            <div class="row">
+                <label for="description" class="col-form-label col-3">Description: </label>
+                <div class="col-8">
+                    <InputText id="description" class="form-control col-8" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
+                </div>
+            </div>
+
+            <div class="row">
+                <label for="isOnline" class="col-form-label col-3">Status: </label>
+                <div class="col-8">
+                    <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Save details</button>
+        </EditForm>
+    </section>
+}
