feat: Add DeleteDevice page
Add the basic DeleteDevice page. Add link buttons to some of the other pages.

--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -44,8 +44,9 @@ else
                         </td>
                     }
                     <td>
-                        <a href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
-                        <a href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
+                        <a class="btn btn-primary" href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
+                        <a class="btn btn-primary" href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
+                        <a class="btn btn-primary" href="@($"deletedevice/{device.DeviceGuid}")">Delete</a>
                     </td>
                 </tr>
             }
