--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -47,7 +47,7 @@ else if (!Saved)
 }
 else
 {
-    <div class="alert @StatusClass">@Message</div>
+    <div class="alert alert-success">"Device successfully updated"</div>
 
     <button type="button" class="btn btn-outline-primary" @onclick="@BackToOverview">Back to device overview</button>
 }
