--- a/Ovning16/Components/App.razor
+++ b/Ovning16/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Ovning16.styles.css" />
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
