feat: Adjust CSS for MainLayout

--- a/Ovning16/Components/Layout/MainLayout.razor
+++ b/Ovning16/Components/Layout/MainLayout.razor
@@ -1,3 +1,27 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<PageTitle>AWIPEV Atmospheric Observatory</PageTitle>
+
+<header>
+    <div class="container-fluid">
+        <div class="row d-flex flex-wrap align-items-center">
+            <div class="col-3">
+                <a href="/">
+                    <img src="images/AWIPEVlogo_458x153.gif"
+                         alt="AWIPEV logo"
+                         width="229"
+                         height="77"
+                         class="d-inline-block" />
+                </a>
+            </div>
+            <div class="col-9">
+                <h1 class="text-center">AWIPEV Atmospheric Observatory</h1>
+                <h2 class="text-center">Instrument Status and Control System</h2>
+            </div>
+        </div>
+    </div>
+</header>
+
+<main>
+    @Body
+</main>
