--- a/Ovning16/Components/Layout/MainLayout.razor.css
+++ b/Ovning16/Components/Layout/MainLayout.razor.css
@@ -1,3 +1,11 @@
+header {
+    background-color: var(--bs-cyan);
+}
+
+main {
+    background-color: var(--bs-gray-200);
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
