--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -1,55 +1,54 @@
 ﻿@page "/"
 @attribute [StreamRendering(true)]
 
-<PageTitle>AWIPEV Atmosphere Observatory</PageTitle>
+<div class="container-fluid">
+    <h3 class="text-center">Overview of Devices</h3>
 
-<h1>Instrument Status and Control Panel</h1>
-
-@if (Devices is null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table>
-        <thead>
-            <tr>
-                <th></th>
-                <th>Device GUID</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Online?</th>
-                <th>Last connected</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var device in Devices)
-            {
+    @if (Devices is null)
+    {
+        <p><em>Loading...</em></p>
+    }
+    else
+    {
+        <table class="table table-hover table-bordered border-primary">
+            <thead>
                 <tr>
-                    <td></td>
-                    <td>@device.ShortGuid</td>
-                    <td>@device.Name</td>
-                    <td>@device.Description</td>
-                    <td>@device.IsOnline</td>
-                    @if (!device.HasBeenConnected)
-                    {
-                        <td>Never connected</td>
-                    }
-                    else
-                    {
-                        <td>
-                            @device.FormatLastConnectionTime()
-                            <br />@device.FormatTimeSinceLastConnection() ago
-                        </td>
-                    }
-                    <td>
-                        <a class="btn btn-primary" href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
-                        <a class="btn btn-primary" href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
-                        <a class="btn btn-primary" href="@($"deletedevice/{device.DeviceGuid}")">Delete</a>
-                    </td>
+                    <th>Device GUID</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Online?</th>
+                    <th>Last connected</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
+            </thead>
+            <tbody>
+                @foreach (var device in Devices)
+                {
+                    <tr class="align-items-center">
+                        <td class="text-monospace">@device.ShortGuid</td>
+                        <td>@device.Name</td>
+                        <td>@device.Description</td>
+                        <td>@device.IsOnline</td>
+                        @if (device.HasBeenConnected)
+                        {
+                            <td>
+                                @device.FormatLastConnectionTime()
+                                <br />@device.FormatTimeSinceLastConnection() ago
+                            </td>
+                        
+                        }
+                        else
+                        {
+                            <td>Never connected</td>
+                        }
+                        <td>
+                            <a class="btn-outline btn-sm btn-primary" href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
+                            <a class="btn-outline btn-sm btn-primary" href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
+                            <a class="btn-outline btn-sm btn-primary" href="@($"deletedevice/{device.DeviceGuid}")">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+</div>
