--- a/Ovning16/Components/Pages/AddDevice.razor
+++ b/Ovning16/Components/Pages/AddDevice.razor
@@ -2,29 +2,38 @@
 
 <h3>Add new device</h3>
 
-<section>
-    <EditForm Enhance Model="DeviceAddDTO" FormName="AddDeviceForm" OnSubmit="@HandleSubmit">
-        <div class="row">
-            <label for="name" class="col-form-label col-3 text-right">Name: </label>
-            <div class="col-8">
-                <InputText id="name" class="form-control col-8" @bind-Value="@DeviceAddDTO.Name" placeholder="Name of the new device"></InputText>
+@if(Device is null){
+    <section>
+        <EditForm Enhance Model="DeviceAddDTO" FormName="AddDeviceForm" OnSubmit="@HandleSubmit">
+            <div class="row">
+                <label for="name" class="col-form-label col-3 text-right">Name: </label>
+                <div class="col-8">
+                    <InputText id="name" class="form-control col-8" @bind-Value="@DeviceAddDTO.Name" placeholder="Name of the new device"></InputText>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <label for="description" class="col-form-label col-3 text-right">Description: </label>
-            <div class="col-8">
-                <InputText id="description" class="form-control col-8" @bind-Value="@DeviceAddDTO.Description" placeholder="Description of the device"></InputText>
+            <div class="row">
+                <label for="description" class="col-form-label col-3 text-right">Description: </label>
+                <div class="col-8">
+                    <InputText id="description" class="form-control col-8" @bind-Value="@DeviceAddDTO.Description" placeholder="Description of the device"></InputText>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <label for="isOnline" class="col-form-label col-3 text-right">Device starts online: </label>
-            <div class="col-8">
-                <InputCheckbox id="isOnline" class="form-check-input" @bind-Value="@DeviceAddDTO.StartsOnline"></InputCheckbox>
+            <div class="row">
+                <label for="isOnline" class="col-form-label col-3 text-right">Device starts online: </label>
+                <div class="col-8">
+                    <InputCheckbox id="isOnline" class="form-check-input" @bind-Value="@DeviceAddDTO.StartsOnline"></InputCheckbox>
+                </div>
             </div>
-        </div>
 
-        <button type="submit" class="btn btn-primary">Create device</button>
-    </EditForm>
-</section>
+            <button type="submit" class="btn btn-primary">Create device</button>
+        </EditForm>
+    </section>
+}
+else
+{
+    <div class="alert alert-success">Device successfully created</div>
+
+    <a class="btn-outline btn-primary" href="@($"devicedetails/{Device.DeviceGuid}")">Device details</a>
+    <a class="btn-outline btn-primary" href="/">Back to overview</a>
+}
