--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -2,7 +2,14 @@
 @attribute [StreamRendering(true)]
 
 <div class="container-fluid">
-    <h3 class="text-center">Overview of Devices</h3>
+    <div class="row">
+        <div class="col-4">
+            <h3 class="text-center">Overview of Devices</h3>
+        </div>
+        <div class="col-2">
+            <a class="btn btn-outline btn-sm btn-primary" href="adddevice">Add new device</a>
+        </div>
+    </div>
 
     @if (Devices is null)
     {
@@ -15,10 +22,9 @@
                 <tr>
                     <th>Device GUID</th>
                     <th>Name</th>
-                    <th>Description</th>
                     <th>Online?</th>
                     <th>Last connected</th>
-                    <th></th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,7 +33,6 @@
                     <tr class="align-items-center">
                         <td class="text-monospace">@device.ShortGuid</td>
                         <td>@device.Name</td>
-                        <td>@device.Description</td>
                         <td>@device.IsOnline</td>
                         @if (device.HasBeenConnected)
                         {
@@ -42,9 +47,9 @@
                             <td>Never connected</td>
                         }
                         <td>
-                            <a class="btn-outline btn-sm btn-primary" href="@($"devicedetails/{device.DeviceGuid}")">Details</a>
-                            <a class="btn-outline btn-sm btn-primary" href="@($"editdevice/{device.DeviceGuid}")">Edit</a>
-                            <a class="btn-outline btn-sm btn-primary" href="@($"deletedevice/{device.DeviceGuid}")">Delete</a>
+                            <a class="btn btn-outline btn-primary" href="@($"/devicedetails/{device.DeviceGuid}")">Details</a>
+                            <a class="btn btn-outline btn-primary" href="@($"/editdevice/{device.DeviceGuid}")">Edit</a>
+                            <a class="btn btn-outline btn-primary" href="@($"/deletedevice/{device.DeviceGuid}")">Delete</a>
                         </td>
                     </tr>
                 }
