feat: Adjust styling and make more consistent

--- a/Ovning16/Components/Layout/MainLayout.razor
+++ b/Ovning16/Components/Layout/MainLayout.razor
@@ -4,24 +4,16 @@
 
 <header>
     <div class="container-fluid">
-        <div class="row d-flex flex-wrap align-items-center">
-            <div class="col-3">
-                <a href="/">
-                    <img src="images/AWIPEVlogo_458x153.gif"
-                         alt="AWIPEV logo"
-                         width="229"
-                         height="77"
-                         class="d-inline-block" />
-                </a>
-            </div>
-            <div class="col-9">
-                <h1 class="text-center">AWIPEV Atmospheric Observatory</h1>
-                <h2 class="text-center">Instrument Status and Control System</h2>
-            </div>
-        </div>
+        <NavMenu></NavMenu>
     </div>
 </header>
 
 <main>
-    @Body
+    <div class="container-fluid h-100">
+        <div class="row">
+            <div id="page-content-wrapper">
+                @Body
+            </div>
+        </div>
+    </div>
 </main>
