--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -1,59 +1,50 @@
 ﻿@page "/"
 @attribute [StreamRendering(true)]
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-4">
-            <h3 class="text-center">Overview of Devices</h3>
-        </div>
-        <div class="col-2">
-            <a class="btn btn-outline btn-sm btn-primary" href="adddevice">Add new device</a>
-        </div>
-    </div>
+<h3 class="text-center text-light-emphasis mt-2 mb-2">Overview of Devices</h3>
 
-    @if (Devices is null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else
-    {
-        <table class="table table-hover table-bordered border-primary">
-            <thead>
-                <tr>
-                    <th>Device GUID</th>
-                    <th>Name</th>
-                    <th>Online?</th>
-                    <th>Last connected</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var device in Devices)
-                {
-                    <tr class="align-items-center">
-                        <td class="text-monospace">@device.ShortGuid</td>
-                        <td>@device.Name</td>
-                        <td>@device.IsOnline</td>
-                        @if (device.HasBeenConnected)
-                        {
-                            <td>
-                                @device.FormatLastConnectionTime()
-                                <br />@device.FormatTimeSinceLastConnection() ago
-                            </td>
-                        
-                        }
-                        else
-                        {
-                            <td>Never connected</td>
-                        }
+@if (Devices is null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <table class="table table-sm table-hover table-bordered border-primary align-middle">
+        <thead>
+            <tr>
+                <th>Device GUID</th>
+                <th>Name</th>
+                <th>Online?</th>
+                <th>Last connected</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var device in Devices)
+            {
+                <tr class="align-items-center">
+                    <td class="text-monospace">@device.ShortGuid</td>
+                    <td>@device.Name</td>
+                    <td>@device.IsOnline</td>
+                    @if (device.HasBeenConnected)
+                    {
                         <td>
-                            <a class="btn btn-outline btn-primary" href="@($"/devicedetails/{device.DeviceGuid}")">Details</a>
-                            <a class="btn btn-outline btn-primary" href="@($"/editdevice/{device.DeviceGuid}")">Edit</a>
-                            <a class="btn btn-outline btn-primary" href="@($"/deletedevice/{device.DeviceGuid}")">Delete</a>
+                            @device.FormatLastConnectionTime()
+                            <br />@device.FormatTimeSinceLastConnection() ago
                         </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    }
-</div>
+                        
+                    }
+                    else
+                    {
+                        <td>Never connected</td>
+                    }
+                    <td>
+                        <a class="btn btn-outline btn-primary" href="@($"/devicedetails/{device.DeviceGuid}")">Details</a>
+                        <a class="btn btn-outline btn-primary" href="@($"/editdevice/{device.DeviceGuid}")">Edit</a>
+                        <a class="btn btn-outline btn-primary" href="@($"/deletedevice/{device.DeviceGuid}")">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
