--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -1,7 +1,7 @@
 ﻿@page "/editdevice/{DeviceGuid:guid}"
 @rendermode InteractiveServer
 
-<h1>Edit instrument details</h1>
+<h4 class="text-start text-light-emphasis ms-4 mt-2 mb-2">Edit instrument details</h4>
 
 @if (Device is null)
 {
@@ -9,43 +9,42 @@
 }
 else if (!Saved)
 {
-    <section>
-        <EditForm Enhance Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
-            <div class="row">
-                <label for="guid" class="col-form-label col-3">Device ID: </label>
-                <div class="col-8">
-                    <input type="text" disabled id="guid" class="form-control col-8" value="@Device.DeviceGuid" />
-                </div>
+    <EditForm Enhance Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
+        <div class="row mb-3 align-items-center">
+            <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
+            <div class="col-sm-10">
+                <input type="text" disabled id="guid" class="form-control" value="@Device.DeviceGuid" />
             </div>
+        </div>
 
-            <div class="row">
-                <label for="name" class="col-form-label col-3">Name: </label>
-                <div class="col-8">
-                    <InputText id="name" class="form-control col-8" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
-                </div>
+        <div class="row mb-3 align-items-center">
+            <label for="name" class="col-form-label col-sm-2">Name: </label>
+            <div class="col-sm-10">
+                <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
             </div>
+        </div>
 
-            <div class="row">
-                <label for="description" class="col-form-label col-3">Description: </label>
-                <div class="col-8">
-                    <InputText id="description" class="form-control col-8" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
-                </div>
+        <div class="row mb-3 align-items-center">
+            <label for="description" class="col-form-label col-sm-2">Description: </label>
+            <div class="col-sm-10">
+                <InputText id="description" class="form-control" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
             </div>
+        </div>
 
-            <div class="row">
-                <label for="isOnline" class="col-form-label col-3">Status: </label>
-                <div class="col-8">
-                    <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
-                </div>
+        <div class="row mb-3 align-items-center">
+            <label for="isOnline" class="col-form-label col-sm-2">sm-2tatus: </label>
+            <div class="col-sm-10">
+                <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
             </div>
+        </div>
 
-            <button type="submit" class="btn btn-primary">Save details</button>
-        </EditForm>
-    </section>
+        <button type="submit" class="btn btn-primary">Save details</button>
+    </EditForm>
 }
 else
 {
-    <div class="alert alert-success">"Device successfully updated"</div>
+    <div class="alert alert-success">Device successfully updated</div>
 
-    <button type="button" class="btn btn-outline-primary" @onclick="@BackToOverview">Back to device overview</button>
+    <a class="btn btn-outline btn-primary" href="@($"devicedetails/{Device.DeviceGuid}")">Device details</a>
+    <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
 }
