--- a/Ovning16/wwwroot/app.css
+++ b/Ovning16/wwwroot/app.css
@@ -1,3 +1,11 @@
+html {
+    background-color: var(--bs-gray-200);
+}
+
+body {
+    background-color: var(--bs-gray-200);
+}
+
 h1:focus {
     outline: none;
 }
