fix: Remove DeviceNotFound in favor of local check

--- a/Ovning16/Components/Pages/DeviceDetails.razor
+++ b/Ovning16/Components/Pages/DeviceDetails.razor
@@ -1,10 +1,13 @@
 ﻿@page "/devicedetails/{DeviceGuid:guid}"
 
-<PageTitle>AWIPEV Atmosphere Observatory</PageTitle>
-
-@if (Device is null)
+@if (DeviceFound is null)
 {
     <p><em>Loading...</em></p>
+}
+else if (DeviceFound is false)
+{
+    <div class="alert alert-danger text-center mt-5 mb-5">This device could not be found.</div>
+    <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
 }
 else
 {
@@ -14,30 +17,30 @@ else
             <tbody>
                 <tr>
                     <td>Name</td>
-                    <td>@Device.Name</td>
+                    <td>@Device!.Name</td>
                 </tr>
                 <tr>
                     <td>Id</td>
-                    <td class="font-monospace">@Device.DeviceGuid</td>
+                    <td class="font-monospace">@Device!.DeviceGuid</td>
                 </tr>
                 <tr>
                     <td>Description</td>
-                    <td>@Device.Description</td>
+                    <td>@Device!.Description</td>
                 </tr>
                 <tr>
                     <td>Status</td>
-                    <td>@Device.IsOnline</td>
+                    <td>@Device!.IsOnline</td>
                 </tr>
                 <tr>
                     <td>Last connection</td>
-                    @if (!Device.HasBeenConnected)
+                    @if (!Device!.HasBeenConnected)
                     {
                         <td>Never connected</td>
                     }
                     else
                     {
                         <td>
-                            @Device.FormatLastConnectionTime() (@Device.FormatTimeSinceLastConnection() ago)
+                            @Device!.FormatLastConnectionTime() (@Device!.FormatTimeSinceLastConnection() ago)
                         </td>
                     }
                 </tr>
@@ -47,7 +50,7 @@ else
 
     <div class="container mt-5">
         <h4 class="text-light-emphasis ms-4 mb-2">Device connection history</h4>
-        @if (!Device.HasBeenConnected)
+        @if (!Device!.HasBeenConnected)
         {
             <p>This device has never been connected to.</p>
         }
@@ -55,7 +58,7 @@ else
         {
             <table class="table table-striped">
                 <tbody>
-                    @foreach (var connectionTime in Device.ConnectionEvents)
+                    @foreach (var connectionTime in Device!.ConnectionEvents)
                     {
                         <tr>
                             <td>@connectionTime.ToString(Ovning16.Models.Device.DateFormat)</td>
