--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -1,5 +1,4 @@
 ﻿@page "/"
-@attribute [StreamRendering(true)]
 
 <h3 class="text-center text-light-emphasis mt-2 mb-2">Overview of Devices</h3>
 
@@ -16,7 +15,7 @@ else
                 <th>Name</th>
                 <th>Online?</th>
                 <th>Last connected</th>
-                <th>Actions</th>
+                <th>Links</th>
             </tr>
         </thead>
         <tbody>
