--- a/Ovning16/Components/Pages/DeviceOverview.razor
+++ b/Ovning16/Components/Pages/DeviceOverview.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
 <h3 class="text-center text-light-emphasis mt-2 mb-2">Overview of Devices</h3>
 
@@ -13,9 +14,10 @@ else
             <tr>
                 <th>Device GUID</th>
                 <th>Name</th>
-                <th>Online?</th>
+                <th class="text-center">Online?</th>
                 <th>Last connected</th>
-                <th>Links</th>
+                <th class="text-center">Actions</th>
+                <th class="text-center">Links</th>
             </tr>
         </thead>
         <tbody>
@@ -24,7 +26,7 @@ else
                 <tr class="align-items-center">
                     <td class="text-monospace">@device.ShortGuid</td>
                     <td>@device.Name</td>
-                    <td>@device.IsOnline</td>
+                    <td class="text-center">@device.IsOnline</td>
                     @if (device.HasBeenConnected)
                     {
                         <td>
@@ -37,10 +39,14 @@ else
                     {
                         <td>Never connected</td>
                     }
-                    <td>
-                        <a class="btn btn-outline btn-primary" href="@($"/devicedetails/{device.DeviceGuid}")">Details</a>
-                        <a class="btn btn-outline btn-primary" href="@($"/editdevice/{device.DeviceGuid}")">Edit</a>
-                        <a class="btn btn-outline btn-primary" href="@($"/deletedevice/{device.DeviceGuid}")">Delete</a>
+                    <td class="text-center">
+                        <button class="btn btn-info" @onclick="@(() => device.PingDevice())">Ping device</button>
+                        <button class="btn btn-info" @onclick="@(() => device.ToggleStatus())">Toggle status</button>
+                    </td>
+                    <td class="text-center">
+                        <a class="btn btn-outline-primary" href="@($"/devicedetails/{device.DeviceGuid}")">Details</a>
+                        <a class="btn btn-outline-primary" href="@($"/editdevice/{device.DeviceGuid}")">Edit</a>
+                        <a class="btn btn-outline-primary" href="@($"/deletedevice/{device.DeviceGuid}")">Delete</a>
                     </td>
                 </tr>
             }
