--- a/Ovning16/Components/Pages/DeleteDevice.razor
+++ b/Ovning16/Components/Pages/DeleteDevice.razor
@@ -12,9 +12,9 @@ else if (!FoundDevice)
 }
 else if (!Saved)
 {
-    <h4 class="text-start text-light-emphasis ms-4 mt-2 mb-2">Device details</h4>
+    <h4 class="text-start text-light-emphasis ms-4 mt-2 mb-2">Delete this device?</h4>
 
-    <table>
+    <table class="table table-sm align-middle mb-3">
         <tbody>
             <tr>
                 <td>ID</td>
@@ -46,14 +46,14 @@ else if (!Saved)
         </tbody>
     </table>
 
-    <button type="submit" class="btn btn-danger" @onclick="@HandleSubmit">Delete device</button>
+    <button type="button" class="btn btn-danger" @onclick="@HandleDelete">Delete device</button>
     <a class="btn btn-outline-primary" href="@($"/devicedetails/{Device.DeviceGuid}")">Device details</a>
     <a class="btn btn-outline-primary" href="@($"/editdevice/{Device.DeviceGuid}")">Edit device</a>
     <a class="btn btn-outline-primary" href="/">Back to overview</a>
 }
 else
 {
-    <div class="alert alert-success mt-5 mb-5">Device successfully deleted</div>
+    <div class="alert alert-success mt-3 mb-3">Device successfully deleted</div>
 
     <a class="btn btn-outline btn-primary" href="/">Back to overview</a>
 }
